[package]
name = "ope-rust-web-server"
version = "0.1.1"
authors = ["Opeyemi"]
edition = "2021"
description = "A library for creating a static web server"
license = "MIT"

[lib]
name = "server"
path = "src/server/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
